--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@slack/oauth": "^3.0.3",
+    "@slack/web-api": "^7.9.3",
     "@tabler/icons-react": "^3.34.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
