--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@faker-js/faker": "^9.9.0",
     "@google/generative-ai": "^0.24.1",
+    "@heroui/react": "^2.8.2",
     "@hookform/resolvers": "^5.2.1",
+    "@internationalized/date": "^3.8.2",
     "@notionhq/client": "^4.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -28,6 +30,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.13",
